--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloudinary_sdk: ^5.0.0+1
   cloud_firestore: ^5.6.8
   intl: ^0.20.2
+  superellipse_shape: ^0.2.0
 
 dev_dependencies:
   flutter_test:
